--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>RunMeasure • Accueil</title>
+  <title>RunMeasure</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <h1>RunMeasure</h1>
-      <nav>
-        <a class="btn" href="options.html">Choisir un mode</a>
-        <a class="btn" href="aide.html">Aide</a>
-      </nav>
+    <header class="card center">
+      <h1 class="brand">RunMeasure</h1>
+      <div class="chips">
+        <a class="btn btn-primary" href="options.html">Démarrer</a>
+        <a class="btn btn-ghost" href="aide.html">Aide</a>
+      </div>
+      <div class="muted" style="margin-top:10px">Version v8.3 – Pack QR</div>
     </header>
-
-    <main class="card">
-      <p>Bienvenue sur RunMeasure. Cliquez sur « Choisir un mode » pour commencer.</p>
-    </main>
-
-    <footer class="muted">RunMeasure — version démo pack ZIP</footer>
+    <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
   </div>
 </body>
 </html>
