--- a/options.html
+++ b/options.html
@@ -8,33 +8,33 @@
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <h1>RunMeasure</h1>
-      <nav>
-        <a class="btn" href="index.html">← Accueil</a>
-        <a class="btn" href="aide.html">Aide</a>
-      </nav>
+    <header class="card center">
+      <h1 class="brand">RunMeasure — V8.3</h1>
+      <div class="chips">
+        <a class="btn btn-ghost" href="index.html">← Accueil</a>
+        <a class="btn btn-ghost" href="aide.html">Aide</a>
+      </div>
     </header>
 
-    <section class="card">
-      <h2>Informations élève</h2>
+    <section class="card section-green">
+      <h2 class="center">Informations élève</h2>
       <div class="row">
         <div>
-          <label for="nom">Nom</label>
+          <label for="nom" class="badge">Nom</label>
           <input id="nom" type="text" autocomplete="family-name" placeholder="Martin">
         </div>
         <div>
-          <label for="prenom">Prénom</label>
+          <label for="prenom" class="badge">Prénom</label>
           <input id="prenom" type="text" autocomplete="given-name" placeholder="Julie">
         </div>
       </div>
       <div class="row">
         <div>
-          <label for="classe">Classe</label>
+          <label for="classe" class="badge">Classe</label>
           <input id="classe" type="text" placeholder="2nde 4">
         </div>
         <div>
-          <label for="sexe">Sexe</label>
+          <label for="sexe" class="badge">Sexe</label>
           <select id="sexe">
             <option value="">—</option>
             <option value="fille">Fille</option>
@@ -43,32 +43,31 @@
           </select>
         </div>
       </div>
-      <p class="muted">Ces infos sont mémorisées pour le QR JSON.</p>
-      <button id="save-eleve" class="btn">💾 Enregistrer l’élève</button>
-    </section>
-
-    <section class="card">
-      <h2>Choisir un mode</h2>
-      <div class="grid">
-        <a class="btn btn-primary btn-wide go" data-mode="intermediaire">Temps intermédiaire</a>
-        <a class="btn btn-wide go" data-mode="chrono">Chrono</a>
-        <a class="btn btn-wide go" data-mode="minuteur">Minuteur</a>
-        <a class="btn btn-wide go" data-mode="chrono_vitesse">Chrono avec calcul de vitesse</a>
-        <a class="btn btn-wide go" data-mode="minuteur_distance">Minuteur avec distance</a>
+      <div class="center" style="margin-top:8px">
+        <button id="save-eleve" class="btn btn-ghost">💾 Enregistrer l’élève</button>
       </div>
     </section>
 
-    <section class="card">
-      <h2>Tests d’endurance</h2>
+    <section class="card section-green">
+      <h2 class="center">Choisir un mode</h2>
       <div class="grid">
-        <a class="btn btn-primary btn-wide go" data-mode="demi_cooper">Demi-Cooper (6′)</a>
-        <a class="btn btn-primary btn-wide go" data-mode="cooper">Cooper (12′)</a>
+        <a class="btn btn-primary" style="background:#2c5be0" data-mode="intermediaire">Temps intermédiaire</a>
+        <a class="btn btn-primary" style="background:#169b51" data-mode="chrono">Chrono</a>
+        <a class="btn btn-primary" style="background:#119b86" data-mode="minuteur">Minuteur</a>
+        <a class="btn btn-primary" style="background:#6b37ff" data-mode="chrono_vitesse">Chrono avec calcul de vitesse</a>
+        <a class="btn btn-primary" style="background:#c96d07" data-mode="minuteur_distance">Minuteur avec distance</a>
       </div>
     </section>
 
-    <footer class="muted">
-      RunMeasure — ZIP
-    </footer>
+    <section class="card section-pink">
+      <h2 class="center">Tests d'endurance</h2>
+      <div class="grid">
+        <a class="btn btn-primary" style="background:#c0316e" data-mode="demi_cooper">Demi-Cooper (6′)</a>
+        <a class="btn btn-primary" style="background:#c0156a" data-mode="cooper">Cooper (12′)</a>
+      </div>
+    </section>
+
+    <footer class="center muted">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
   </div>
 
   <script>
@@ -96,10 +95,9 @@
     document.addEventListener('DOMContentLoaded', () => {
       loadForm();
       document.getElementById('save-eleve').addEventListener('click', () => {
-        setEleve(readForm());
-        alert('Élève enregistré ✅');
+        setEleve(readForm()); alert('Élève enregistré ✅');
       });
-      document.querySelectorAll('a.go').forEach(a => {
+      document.querySelectorAll('[data-mode]').forEach(a => {
         a.addEventListener('click', (ev) => {
           ev.preventDefault();
           setEleve(readForm());
