--- a/aide.html
+++ b/aide.html
@@ -8,13 +8,19 @@
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <h1>Aide</h1>
-      <nav><a class="btn" href="index.html">← Accueil</a></nav>
+    <header class="card center">
+      <h1 class="brand" style="font-size:34px">RunMeasure — Aide</h1>
+      <div class="chips">
+        <a class="btn btn-ghost" href="index.html">← Accueil</a>
+      </div>
     </header>
     <section class="card">
-      <h2>QR JSON (ScanProf)</h2>
-      <p>Les modes « Temps intermédiaire », « Demi-Cooper » et « Cooper » génèrent un QR JSON compatible ScanProf.</p>
+      <h2>QR JSON</h2>
+      <p>Les modes « Temps intermédiaire », « Demi-Cooper (6′) » et « Cooper (12′) » génèrent un QR JSON compatible ScanProf.</p>
+      <ul>
+        <li>QR manuel : bouton « 📱 Générer le QR JSON »</li>
+        <li>QR auto : quand vous appuyez sur « Stop »</li>
+      </ul>
     </section>
   </div>
 </body>
