--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
       <h1 class="brand">RunMeasure</h1>
       <div class="chips">
         <a class="btn btn-primary" href="options.html">Démarrer</a>
-        <a class="btn btn-ghost" href="aide.html">Aide</a>
+        <a class="btn btn-ghost" href="help.html">Aide</a>
+        <a class="btn btn-ghost" href="safety.html">Fiche sécurité</a>
       </div>
-      <div class="muted" style="margin-top:10px">Version v8.3 – Pack QR</div>
+      <div class="muted" style="margin-top:10px">Pack “EPS iPad” — QR intégrés</div>
     </header>
-    <footer>RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
+
+    <section class="card">
+      <h2>Bienvenue 👋</h2>
+      <p>Choisissez “Démarrer”, renseignez l’élève, puis sélectionnez un mode (Chrono, Minuteur, Intermédiaires, Cooper…).</p>
+    </section>
+
+    <footer class="muted">RunMeasure — EPS Lycée Vauban (Lux.)</footer>
   </div>
 </body>
 </html>
